--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<div class="BoutonBitcoin">
 			
-				<button type="button" class="btn btn-success" href="/Bitcoin/index.html">Page Bitcoin</button>
+				<button type="button" class="btn btn-success" href="Bitcoin/bitcoin.html">Page Bitcoin</button>
 				
 			</div>
 			
