--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<div class="BoutonBitcoin">
 			
-				<a href="Bitcoin/bitcoin.html"><button type="button" class="btn btn-success">Page Bitcoin</button></a>
+				<a href="bitcoin/index.html"><button type="button" class="btn btn-success">Page Bitcoin</button></a>
 				
 			</div>
 			
