--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -1,10 +1,15 @@
+<!DOCTYPE html>
 <html>
-
-<head>
-</head>
-
-<body>
-<div class="row">
+	<head>
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+		<title> Site de Vic</title>						
+	</head>
+	<body>
+		
+		
+<div class="container">
+			<div class="row">
 				<div class="col-lg-4 col-md-6">
 					<div class="panel panel-yellow">
 						<div class="panel-heading">
@@ -22,6 +27,20 @@
 						</div>
 					</div>
 				</div>
-</body>
+				
 
+<div class="row">
+	<div class="col-lg-12 col-xs-6">
+    	<pre>
+        	<code id="demo" class="json kljs"></code>
+    	</pre>
+	</div>
+</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+	<script src="../js/script.js"></script>					
+
+	</body>
+	
 </html>
