--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			
 			<link rel="stylesheet" href="style.css">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-			<title> TP IF Bilalqmpifj </title>						
+			<title> TP IF Bilalhbkh </title>						
 
 	</head>
 
