Ajout lien page explorer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			
 			<link rel="stylesheet" href="style.css">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-			<title> TP IF Bilalhbkh </title>						
+			<title> TP IF Bilal </title>						
 
 	</head>
 
@@ -17,9 +17,13 @@
 			<div class="BoutonBitcoin">
 			
 				<a href="bitcoin/index.html"><button type="button" class="btn btn-success">Page Bitcoin</button></a>
-				
+			
 			</div>
 			
+			<div class="BoutonExplorer">
+				
+				<a href="explorer/explorer.html"><button type="button" class="btn-success">Page Explorer</button></a>
+			</div>
 			
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
