--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			
 			<div class="BoutonExplorer">
 				
-				<a href="explorer/explorer.html"><button type="button" class="btn-success">Page Explorer</button></a>
+				<a href="explorer/pageExplorer.html"><button type="button" class="btn-success">Page Explorer</button></a>
 			</div>
 			
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
