--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 			
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<meta http-equiv="X-UA-Compatible" content="ie=edge">	
 			<link rel="stylesheet" href="style.css">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 			<title> TP IF Bilal </title>						
@@ -10,6 +13,10 @@
 
 	<body>
 
+			
+			<li><a href="../index.html">Page d'accueil</a></li>
+			<li><a href="../bitcoin/index.html">Page Bitcoin</a></li>
+		
 			<h1>Explorateur Bitcoin</h1>
 			<h2>Bilal EL HARAB</h2>
 			
