--- a/explorer/pageExplorer.html
+++ b/explorer/pageExplorer.html
@@ -12,6 +12,8 @@
 		
 		<body>
 			
+			<li><a href="../index.html">Page d'accueil</a></li>
+			<li><a href="../bitcoin/index.html">Page Bitcoin</a></li>
 			
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
