--- a/explorer/pageExplorer.html
+++ b/explorer/pageExplorer.html
@@ -12,9 +12,19 @@
 		
 		<body>
 			
-			<li><a href="../index.html">Page d'accueil</a></li>
-			<li><a href="../bitcoin/index.html">Page Bitcoin</a></li>
-			<li class="active">Explorer</li>
+			<div class="BoutonBitcoin">
+			
+				<a href="../bitcoin/index.html"><button type="button" class="btn btn-success">Page Bitcoin</button></a>
+			
+			</div>
+			
+			<div class="BoutonAccueil">
+			
+				<a href="../index.html"><button type="button" class="btn btn-success">Page Bitcoin</button></a>
+			
+			</div>
+			
+			
 			
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
