--- a/explorer/pageExplorer.html
+++ b/explorer/pageExplorer.html
@@ -20,7 +20,7 @@
 			
 			<div class="BoutonAccueil">
 			
-				<a href="../index.html"><button type="button" class="btn btn-success">Page Bitcoin</button></a>
+				<a href="../index.html"><button type="button" class="btn btn-success">Page d'accueil</button></a>
 			
 			</div>
 			
