--- a/explorer/pageExplorer.html
+++ b/explorer/pageExplorer.html
@@ -12,7 +12,7 @@
 		
 		<body>
 			
-			<h1>Bienvenue sur explorer</h1>
+			<h1>Formulaire de saisie</h1>
 			<div class="BoutonBitcoin">
 			
 				<a href="../bitcoin/index.html"><button type="button" class="btn btn-success">Page Bitcoin</button></a>
