--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -6,7 +6,13 @@
 		<title> Site de Vic</title>						
 	</head>
 	<body>
-		
+		<div class="BoutonBitcoin">
+			<a href="../explorer/pageExplorer.html"><button type="button" class="btn btn-success">Page Explorer</button></a>	
+		</div>
+			
+		<div class="BoutonExplorer">				
+			<a href="../index.html"><button type="button" class="btn btn-success">Page Explorer</button></a>
+		</div>
 		
 <div class="container">
 			<div class="row">
