--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -11,7 +11,7 @@
 		</div>
 			
 		<div class="BoutonExplorer">				
-			<a href="../index.html"><button type="button" class="btn btn-success">Page Explorer</button></a>
+			<a href="../index.html"><button type="button" class="btn btn-success">Page d'accueil</button></a>
 		</div>
 		
 <div class="container">
@@ -27,13 +27,14 @@
 									<h2>
 										<span id="bitcoin_block_number"></span>
 									</h2>
+								</div>
 									<div>Blocks</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				
+	</div>
 
 <div class="row">
 	<div class="col-lg-12 col-xs-6">
