--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-		<title> Site de Vic</title>						
+		<title> Page bitcoin</title>						
 	</head>
 	<body>
 		<div class="BoutonBitcoin">
