--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -14,35 +14,50 @@
 			<a href="../index.html"><button type="button" class="btn btn-success">Page d'accueil</button></a>
 		</div>
 		
-<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="panel panel-yellow">
-						<div class="panel-heading">
-							<div class="row">
-								<div class="col-xs-3">
-									<i class="fa fa-tasks fa-5x"></i>
-								</div>
-								<div class="col-xs-9 text-right">
-									<h2>
-										<span id="bitcoin_block_number"></span>
-									</h2>
-								</div>
-									<div>Blocks</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-	</div>
+		<div class="container">
 
-<div class="row">
-	<div class="col-lg-12 col-xs-6">
-    	<pre>
-        	<code id="demo" class="json kljs"></code>
-    	</pre>
-	</div>
-</div>
+        <ol class="breadcrumb">
+            <li><a href="../index.html">Accueil</a></li>
+            <li class="active">Bitcoin</li>
+        </ol>
+
+
+        <h2>Info</h2>
+        <div class="row">
+            <div class="col-lg-12 col-xs-6">
+                <pre>
+                    <code id="info" class ="json kljs"></code>
+                </pre>
+            </div>
+        </div>
+
+        <h2>Blockchain info</h2>
+        <div class="row">
+            <div class="col-lg-12 col-xs-6">
+                <pre>
+          	        <code id="blockchaininfo" class="json kljs"></code>
+      	         </pre>
+            </div>
+        </div>
+
+        <h2>Mining info</h2>
+        <div class="row">
+            <div class="col-lg-12 col-xs-6">
+                <pre>
+                    <code id="mininginfo" class="json kljs"></code>
+                </pre>
+            </div>
+        </div>
+
+        <h2>Peer info</h2>
+        <div class="row">
+            <div class="col-lg-12 col-xs-6">
+                <pre>
+                      <code id="peerinfo" class="json kljs"></code>
+                </pre>
+            </div>
+        </div>
+    </div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
