--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<meta charset="UTF-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 		<title> Page bitcoin</title>						
@@ -16,52 +19,55 @@
 		
 		<div class="container">
 
-        <ol class="breadcrumb">
-            <li><a href="../index.html">Accueil</a></li>
-            <li class="active">Bitcoin</li>
-        </ol>
+			<ol class="breadcrumb">
+			    <li><a href="../index.html">Accueil</a></li>
+			    <li class="active">Bitcoin</li>
+			</ol>
 
 
-        <h2>Info</h2>
-        <div class="row">
-            <div class="col-lg-12 col-xs-6">
-                <pre>
-                    <code id="info" class ="json kljs"></code>
-                </pre>
-            </div>
-        </div>
+			<h2>Info</h2>
+			<div class="row">
+			    <div class="col-lg-12 col-xs-6">
+				<pre>
+				    <code id="info" class ="json kljs"></code>
+				</pre>
+			    </div>
+			</div>
 
-        <h2>Blockchain info</h2>
-        <div class="row">
-            <div class="col-lg-12 col-xs-6">
-                <pre>
-          	        <code id="blockchaininfo" class="json kljs"></code>
-      	         </pre>
-            </div>
-        </div>
+			<h2>Blockchain info</h2>
+			<div class="row">
+			    <div class="col-lg-12 col-xs-6">
+				<pre>
+					<code id="blockchaininfo" class="json kljs"></code>
+				 </pre>
+			    </div>
+			</div>
 
-        <h2>Mining info</h2>
-        <div class="row">
-            <div class="col-lg-12 col-xs-6">
-                <pre>
-                    <code id="mininginfo" class="json kljs"></code>
-                </pre>
-            </div>
-        </div>
+			<h2>Mining info</h2>
+			<div class="row">
+			    <div class="col-lg-12 col-xs-6">
+				<pre>
+				    <code id="mininginfo" class="json kljs"></code>
+				</pre>
+			    </div>
+			</div>
 
-        <h2>Peer info</h2>
-        <div class="row">
-            <div class="col-lg-12 col-xs-6">
-                <pre>
-                      <code id="peerinfo" class="json kljs"></code>
-                </pre>
-            </div>
-        </div>
-    </div>
+			<h2>Peer info</h2>
+			<div class="row">
+			    <div class="col-lg-12 col-xs-6">
+				<pre>
+				      <code id="peerinfo" class="json kljs"></code>
+				</pre>
+			    </div>
+			</div>
+    		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-	<script src="../js/script.js"></script>					
+		<script src="../js/script.js" charset="utf-8"></script>
+		<script src="../js/script.js"></script>	
+		<script type="text/javascript">
+		    homePageLoading();
+		</script>
 
 	</body>
 	
