--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -9,19 +9,18 @@
 		<title> Page bitcoin</title>						
 	</head>
 	<body>
-		<div class="BoutonBitcoin">
-			<a href="../explorer/pageExplorer.html"><button type="button" class="btn btn-success">Page Explorer</button></a>	
-		</div>
-			
-		<div class="BoutonExplorer">				
-			<a href="../index.html"><button type="button" class="btn btn-success">Page d'accueil</button></a>
-		</div>
+		
 		
 		<div class="container">
 
 			<ol class="breadcrumb">
-			    <li><a href="../index.html">Accueil</a></li>
-			    <li class="active">Bitcoin</li>
+				<div class="BoutonBitcoin">
+				<a href="../explorer/pageExplorer.html"><button type="button" class="btn btn-success">Page Explorer</button></a>	
+				</div>
+
+				<div class="BoutonExplorer">				
+					<a href="../index.html"><button type="button" class="btn btn-success">Page d'accueil</button></a>
+				</div>
 			</ol>
 
 
@@ -65,7 +64,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="../js/script.js" charset="utf-8"></script>
 		<script src="../js/script.js"></script>	
-		<script type="text/javascript">
+		<script type="text/javascript.js">
 		    homePageLoading();
 		</script>
 
