--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -64,7 +64,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="../js/script.js" charset="utf-8"></script>
 		<script src="../js/script.js"></script>	
-		<script type="text/javascript.js">
+		<script type="text/javascript">
 		    homePageLoading();
 		</script>
 
