--- a/explorer/pageExplorer.html
+++ b/explorer/pageExplorer.html
@@ -13,6 +13,7 @@
 		<body>
 			
 			<h1>Formulaire de saisie</h1>
+			<ol class="breadcrumb">
 			<div class="BoutonBitcoin">
 			
 				<a href="../bitcoin/index.html"><button type="button" class="btn btn-success">Page Bitcoin</button></a>
@@ -24,7 +25,7 @@
 				<a href="../index.html"><button type="button" class="btn btn-success">Page d'accueil</button></a>
 			
 			</div>
-			
+			</ol>
 			
 			<form class="form-inline" id="form">
 			    <div class="form-group">
