--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1>Explorateur Bitcoin</h1>
 			<h2>Bilal EL HARAB</h2>
 			
-
+			<ol class="breadcrumb">
 			<div class="BoutonBitcoin">
 			
 				<a href="bitcoin/index.html"><button type="button" class="btn btn-success">Page Bitcoin</button></a>
@@ -30,7 +30,7 @@
 				
 				<a href="explorer/pageExplorer.html"><button type="button" class="btn btn-success">Page Explorer</button></a>
 			</div>
-			
+			</ol>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 			<script src="../custom.js"></script>
